[package]
name = "better-dcu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "dce"
path = "src/main.rs"

[dependencies]
console = "0.15.7"
crossterm = "0.27.0"
fake-tty = "0.3.1"
yaml-rust = "0.4.5"
